--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.q_book_finder">
+    <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="q_book_finder"
         android:name="${applicationName}"
