--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   http:
   flutter_dotenv:
   shared_preferences:
+  fluttertoast: ^8.0.8
   material_floating_search_bar: ^0.3.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
